# min

./: CREDITS  GettingStarted.txt  README  doxygenconf  min.changes  min.spec
min/: Makefile.am  build.sh  configure.ac
min/TestModuleTemplates/: createtestmodule
min/TestModuleTemplates++/: createtestmodule++
min/TestModuleTemplates++/HardCodedTestModuleXXX/: Makefile.am  Makefile.am.build  Makefile.am.dpkg  build.sh  configure.in  createhardcodedmodule
min/TestModuleTemplates++/HardCodedTestModuleXXX/debian/: changelog  control  rules
min/TestModuleTemplates++/HardCodedTestModuleXXX/src/: HardCodedTestModuleXXX.cpp  HardCodedTestModuleXXXCases.cpp
min/TestModuleTemplates++/MINUnitXXX/: Makefile.am  Makefile.am.build  Makefile.am.dpkg  Makefile.cvs  configure.ac  configure.in  createminunitmodule
min/TestModuleTemplates++/MINUnitXXX/data/: MINUnitXXX.min.conf
min/TestModuleTemplates++/TemplateLuaScriptXXX/: LuaTestClassXXX_DoxyFile.txt  Makefile.am  Makefile.am.build  Makefile.am.dpkg  buildandrun.sh  configure.ac  configure.in  createluatestclass
min/TestModuleTemplates++/TemplateQtScriptXXX/: TemplateQtScriptXXX.pro  build.sh  createqttestclass
min/TestModuleTemplates++/TemplateScriptXXX/: Makefile.am  Makefile.am.build  Makefile.am.dpkg  autogen.sh  configure.ac  configure.in  createtestclass
min/TestModuleTemplates++/TestModuleXXX/: Makefile.am  Makefile.am.build  Makefile.am.dpkg  build.sh  configure.in  createmodule
min/TestModuleTemplates/HardCodedTestModuleXXX/: HardCodedTestModuleXXX_DoxyFile.txt  Makefile.am.build  Makefile.am.dpkg  build.sh  configure.ac  configure.in  createhardcodedmodule
min/TestModuleTemplates/MINUnitXXX/: Makefile.am  Makefile.am.build  Makefile.am.dpkg  configure.ac  configure.in  createminunitmodule
min/TestModuleTemplates/TemplateLuaScriptXXX/: Makefile.am  Makefile.am.build  Makefile.am.dpkg  TemplateScriptXXX_DoxyFile.txt  build.sh  configure.in  createluatestclass
min/TestModuleTemplates/TemplateScriptXXX/: Makefile.am  Makefile.am.build  Makefile.am.dpkg  buildandrun.sh  configure.in  createtestclass
min/TestModuleTemplates/TestModuleXXX/: Makefile.am  Makefile.am.build  Makefile.am.dpkg  createmodule
min/TestModuleTemplates/sut_extXXX/: setup.py  sut_ext.c
min/data/: Makefile.am  min.event  min.init  mindelmod.pl  patchminconf.sh
min/debian/: changelog  control  copyright  min-dev.install  min.install  min.postinst  min.prerm  rules
min/man/: Makefile.am  createtestmodule.man  min.conf.man  min.man  tm_get_test_cases.man  tm_run_test_case.man
min/mintests/: Makefile.am  dllist_cases.c  equal.h  min_unit_selftest_cases.c  scripter_tests.cfg
min/pkgconfig/: Makefile.am  min-dev.pc.in  min.pc.in
min/shared/: Makefile.am  min_unit_macros.h  minunit.c
min/src/: Makefile.am  min_common.h
min/src/consoleui/: callback.c
min/src/engine/: Makefile.am
min/src/engine/data_structures_api/: data_api.h  (+8 more)
min/src/ext_interface/: Makefile.am  ext_interface.c  ext_interface.h
min/src/in_plugins/: Makefile.am  min_dbus_interface.xml  min_dbus_plugin.c  min_dbus_plugin_common.h  min_plugin_interface.h
min/src/main/: Makefile.am  min  min-clean.sh  min_daemon.c  min_main.c
min/src/mintfwif/: Makefile.am  mintfwif.c  mintfwif.h  mintfwif.tests
min/src/services/: Makefile.am
min/src/test_libraries/: Demo.c  Demo.h  DemoCases.c  Makefile.am  file_operations.c  min_unit_dllist.c  min_unit_dllist_cases.c  min_unit_macros.h  min_unit_selftest.c  min_unit_selftest_cases.c  tc.c  tc.h  tcCases.c  testlib_event_client.c  testlib_event_server.c  testlibrary2.c  testlibrary3.c  testlibrary4.c  testlibrary_fileio.c
min/src/tmc/: Makefile.am  main.c  tmc.c  tmc.h  tmc_common.h  tmc_ipc.c  tmc_ipc.h  tmc_msghnd.c  tmc_msghnd.h  tmc_tpc.c  tmc_tpc.h
min/src/utils/: Makefile.am
min/tests/: Makefile.am  check_cli.sh  check_dllist.c  check_dsa.c  check_dsa.tests  check_integration.c  check_ipc.c  check_ipc.tests  check_item_parser.c  check_item_parser.tests  check_libloader.c  check_logger.c  check_logger.tests  check_min_lego_interface.c  check_mintfwif.c  check_minunit.c  check_minunit.tests  check_parser.c  check_scripter_dsa.c  check_services.c  check_tec.c  check_text.c  check_tmapi.c  check_utils.c  file.cfg  integration.tests  min.cfg  module.cfg  rel_master.cfg  rel_slave.cfg
mincitests/: Makefile.am  configure.ac
mincitests/data/: Makefile.am  python_tests.py  scripter_tests.cfg  scripter_with_scripter.cfg  test.cfg  test.xml  tests.xml
mincitests/debian/: changelog  control  install  rules
mincitests/qsrc/: minqtdbtests.cfg  minqtdbtests.cpp  minqtdbtests.h  minqtdbtests.pro  minqtdbtestsCases.cpp  minqtdbtestsCases.hpp  qsrc.pro
mincitests/qsrc/data/: minqtdbtests.cfg
mincitests/src/: equal.c  item_parser_cases.c  logger_tests_cases.c  min_unit_selftest_cases.c  settings_tests_cases.c  settings_tests_utils.c  settings_tests_utils.h
mindbusplugin/: Makefile.am  configure.ac
mindbusplugin/data/: Makefile.am  mindbus.sh  org.maemo.MIN.service
mindbusplugin/debian/: changelog  control  copyright  rules
mindbusplugin/src/: Makefile.am  min_dbus_interface.xml  min_dbus_plugin.c  min_dbus_plugin_common.h
minpythonmodule/: Makefile.am  build.sh  configure.ac
minpythonmodule/debian/: changelog  control  copyright  rules
minpythonmodule/min_ext/: Makefile.am  min_ext.c  minwrap.py
minpythonmodule/py_module/: Makefile.am
minpythonmodule/py_module/src/: py_module.c  py_module.h  py_moduleCases.c
minpythonmodule/tests/: ptest.py  setup.py  sut_ext.c
mintests/: ChangeLog  Makefile.am  configure.ac
mintests/debian/: changelog  control  copyright  min-tests.postrm  rules
mintests/src/: Makefile.am
mintests/src/Events/: Makefile.am  events.c  eventsCases.c
mintests/src/HardCoded/: HardCoded.c  HardCodedCases.c  Makefile.am
mintests/src/LuaTestClass/: LuaTestClass.c  LuaTestClass.h  LuaTestClassCases.c  Makefile.am  lmem.h  luaconf.h
mintests/src/TestClass/: Makefile.am  TestClass.c  TestClass.h  TestClassCases.c
mintests/src/cfg/: Makefile.am  luascripter.lua  scripter.cfg
(+2162 files in other folders)
