AC_INIT(configure.ac)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(min-tests, 1.0)
AM_PROG_CC_C_O
AC_LANG_C

AM_PROG_LIBTOOL

LT_CURRENT=0
LT_REVISION=0
LT_AGE=0
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AC_OUTPUT(Makefile \
          src/Makefile \
          src/cfg/Makefile \
          src/bin/Makefile \
          src/Events/Makefile \
          src/HardCoded/Makefile \
          src/TestClass/Makefile \
          src/LuaTestClass/Makefile)
