INCLUDES = -I. -I.. -I../utils/logger -I../utils/ipc -I../utils/dllist -I../utils/parser -I../consoleui -I../engine/tec -I../services/event_system -I../engine/data_structures_api -I../utils/text
METASOURCES = AUTO
noinst_LIBRARIES = libminlibextinterface.a
libminlibextinterface_a_SOURCES = ext_interface.c
noinst_HEADERS = ext_interface.h
